<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TastyDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="lbl_scan">Scan</string>
    <string name="lbl_recherche">Lancer la recherche</string>
    <string name="lbl_pick">Choisir le circuit</string>
    <string name="btn_geo">Lancer geoloc</string>
    <string name="mapKey">50:31:1D:D4:68:3C:91:27:3F:4E:B4:D3:07:A8:3D:58:0F:41:1B:EE</string>
    <string name="txt_circuit">Circuit</string>
    <string name="txt_strasbourg">Strasbourg</string>
    <string name="lbl_position">Verifier ma position</string>

</resources>